# eiger

./: .dockerignore  .env  .env.local  .gitignore  .pre-commit-config.yaml  Dockerfile  cosmic-ray.config.ini  docker-compose.yaml  fly.toml  manage.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  release.yml
eiger/: asgi.py  logging.py  settings.py  urls.py  wsgi.py
eiger/authentication/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
eiger/authentication/migrations/: 0001_initial.py  0002_climber_trainer.py
eiger/core/: models.py
eiger/metric/: admin.py  apps.py  models.py  urls.py  views.py
eiger/metric/migrations/: 0001_initial.py  0002_initial.py  0003_alter_timeundereffortmetricconfiguration_identifier_and_more.py  0004_alter_timeundereffortmetricconfiguration_identifier_and_more.py
eiger/moonboard/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
eiger/moonboard/management/commands/: import_data.py  import_logbook.py  import_moonboard_data.py
eiger/moonboard/migrations/: 0001_initial.py  0002_rename_user_logbookentry_climber.py
eiger/moonboard/service/: moonboard_api.py
eiger/templates/components/: footer.html  navbar.html
eiger/templates/components/climbers/: navbar.html  popover_message.html  save_button.html
eiger/templates/components/trainers/: navbar.html
eiger/templates/js/: popovers.js
eiger/templates/pages/: base.html  edit_exercise.html  edit_exercise_variation.html  home.html  index.html
eiger/templates/pages/climbers/: base.html  complete_workout.html  create_training_plan.html  create_training_plan_from_shared_url.html  graph_template.html  home.html  index.html  list_exercise_selection.html  register_moonboard_account.html  retrieve_day.html  retrieve_training_plan.html
eiger/templates/pages/trainers/: base.html  edit_exercise.html  edit_exercise_variation.html  home.html  index.html
eiger/trainers/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
eiger/trainers/fixtures/: initial.json
eiger/trainers/migrations/: 0001_initial.py  0002_category_color.py
eiger/training_plan/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  utils.py  views.py
eiger/training_plan/migrations/: 0001_initial.py  0002_alter_week_number_alter_day_unique_together_and_more.py
eiger/training_plan/templatetags/: custom_filters.py
eiger/workout/: admin.py  apps.py  models.py
eiger/workout/migrations/: 0001_initial.py  0002_remove_workout_target_rpe.py
nginx/: Dockerfile  default.conf
scripts/: ci.sh  formatter.sh  functional-tests.sh  gunicorn.sh  gunicorn_config.py  mutation-tests.sh  tests.sh  utils.sh
tests/: conftest.py
tests/functional/: conftest.py  test_trainer_home.py  test_trainer_login.py  test_trainer_registration.py  test_trainer_update_exercise.py
tests/test_eiger/: conftest.py  strategies.py  test_urls.py
tests/test_eiger/test_trainers/: conftest.py
tests/test_eiger/test_trainers/test_admin/: test_category.py  test_exercise.py  test_exercise_type.py  test_exercise_variation.py
tests/test_eiger/test_trainers/test_forms/: test_edit_exercise_form.py  test_edit_exercise_variation_form.py  test_trainer_creation_form.py
tests/test_eiger/test_trainers/test_migrations/: test_0001_initial.py  test_0002_category_category_color.py
tests/test_eiger/test_trainers/test_models/: test_category.py  test_exercise.py  test_exercise_type.py  test_exercise_variation.py
tests/test_eiger/test_trainers/test_views/: conftest.py  test_index_view.py  test_login_view.py  test_registration_view.py  test_retrieve_category_exercise_types_view.py  test_retrieve_exercise_variation_view.py  test_retrieve_exercise_view.py  test_update_exercise_variation_view.py  test_update_exercise_view.py
tests/test_eiger/test_training_plans/test_views/: test_complete_workout_view.py  test_list_training_plans_view.py
