[tool.poetry]
name = "eiger"
version = "0.1.0"
description = ""
authors = ["Alexandre Xavier <ale.bxsantos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = {extras = ["argon2"], version = "^4.2.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
