[tool.poetry]
name = "eiger"
version = "0.1.0"
description = ""
authors = ["Alexandre Xavier <ale.bxsantos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = {extras = ["argon2"], version = "^4.2.2"}


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.1.0"
ruff = "^0.0.275"
isort = "^5.12.0"
blue = "^0.9.1"
safety = "^2.3.5"
django-migration-linter = "^4.1.0"
django-extra-checks = "^0.13.3"
mypy = "^1.4.0"
django-stubs = "^4.2.1"
nplusone = "^1.0.0"
model-bakery = "^1.12.0"
django-test-migrations = "^1.3.0"
hypothesis = "^6.79.2"
cosmic-ray = "^8.3.7"
django-querycount = "^0.8.3"
selenium = "^4.10.0"
pytest = "^7.4.0"
pytest-django = "^4.5.2"
pytest-cov = "^4.1.0"
pytest-randomly = "^3.12.0"
pytest-timeout = "^2.1.0"
pytest-mock = "^3.11.1"
pytest-icdiff = "^0.6"
pytest-clarity = "^1.0.1"
pytest-sugar = "^0.9.7"
pre-commit = "^3.3.3"
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
